--- a/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/cambiosRealizadosPorCliente.jrxml
+++ b/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/cambiosRealizadosPorCliente.jrxml
@@ -141,25 +141,25 @@ FROM
 			</subreport>
 		</band>
 	</detail>
-	<summary>
-		<band height="26" splitType="Stretch">
+	<pageFooter>
+		<band height="50">
 			<textField>
-				<reportElement x="218" y="2" width="100" height="20" uuid="61ceda11-d5a7-4356-9e27-ff2196fd9316"/>
-				<textFieldExpression><![CDATA[$V{PAGE_NUMBER}]]></textFieldExpression>
-			</textField>
-			<textField pattern="EEEEE dd MMMMM yyyy">
-				<reportElement x="455" y="3" width="100" height="20" uuid="513797e7-9dc9-4092-bac8-62c4df5b4ee0"/>
-				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="2" y="0" width="80" height="20" uuid="fcd62cb3-abf6-42ae-af09-ef8b98fe02c9"/>
+				<reportElement x="228" y="20" width="80" height="20" uuid="fcd62cb3-abf6-42ae-af09-ef8b98fe02c9"/>
 				<textElement textAlignment="Right"/>
 				<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
 			</textField>
 			<textField evaluationTime="Report">
-				<reportElement x="82" y="0" width="40" height="20" uuid="4c7f9e75-4b30-4032-a048-31f3284f0b9c"/>
+				<reportElement x="308" y="20" width="40" height="20" uuid="4c7f9e75-4b30-4032-a048-31f3284f0b9c"/>
 				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
 			</textField>
+			<staticText>
+				<reportElement x="13" y="20" width="205" height="20" uuid="a09a4c1c-0640-43e7-8fac-f0c9fb88b28a"/>
+				<text><![CDATA[Sinetcom - Reporte de Movimiento de Inv.]]></text>
+			</staticText>
+			<textField pattern="EEEEE dd MMMMM yyyy">
+				<reportElement x="422" y="20" width="131" height="20" uuid="513797e7-9dc9-4092-bac8-62c4df5b4ee0"/>
+				<textFieldExpression><![CDATA[new java.util.Date()]]></textFieldExpression>
+			</textField>
 		</band>
-	</summary>
+	</pageFooter>
 </jasperReport>
