--- a/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/reportePorAbastecerConInfo.jrxml
+++ b/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/reportePorAbastecerConInfo.jrxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <jasperReport xmlns="http://jasperreports.sourceforge.net/jasperreports" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://jasperreports.sourceforge.net/jasperreports http://jasperreports.sourceforge.net/xsd/jasperreport.xsd" name="PorAbastecer" pageWidth="842" pageHeight="595" orientation="Landscape" whenNoDataType="AllSectionsNoDetail" columnWidth="802" leftMargin="20" rightMargin="20" topMargin="20" bottomMargin="0" whenResourceMissingType="Empty" uuid="66284476-54d3-4246-b83a-a45ceae7e2c6">
 	<property name="ireport.zoom" value="2.0"/>
-	<property name="ireport.x" value="233"/>
+	<property name="ireport.x" value="636"/>
 	<property name="ireport.y" value="0"/>
 	<style name="Title" fontName="Arial" fontSize="26" isBold="true" pdfFontName="Helvetica-Bold"/>
 	<style name="SubTitle" forecolor="#666666" fontName="Arial" fontSize="18"/>
@@ -170,6 +170,15 @@ HAVING
 				</textElement>
 				<text><![CDATA[Sinetcom - Reporte de Inventarios]]></text>
 			</staticText>
+			<textField>
+				<reportElement x="438" y="0" width="80" height="20" uuid="472512bb-fd8c-41a0-971c-a2648a0d9497"/>
+				<textElement textAlignment="Right"/>
+				<textFieldExpression><![CDATA["Página "+$V{PAGE_NUMBER}+" de"]]></textFieldExpression>
+			</textField>
+			<textField evaluationTime="Report">
+				<reportElement x="518" y="0" width="40" height="20" uuid="92960966-3740-4508-9b3d-590617d8b3f8"/>
+				<textFieldExpression><![CDATA[" " + $V{PAGE_NUMBER}]]></textFieldExpression>
+			</textField>
 		</band>
 	</pageFooter>
 	<summary>
