--- a/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/garantiasPorVencerEnProx2Semanas.jrxml
+++ b/servicedesksinetcom/servicedesksinetcom-web/src/main/webapp/resources/reportes/garantiasPorVencerEnProx2Semanas.jrxml
@@ -77,7 +77,7 @@ WHERE (SELECT COUNT(*) FROM
 					<subreportParameterExpression><![CDATA[$F{Contrato_numero}]]></subreportParameterExpression>
 				</subreportParameter>
 				<connectionExpression><![CDATA[$P{REPORT_CONNECTION}]]></connectionExpression>
-				<subreportExpression><![CDATA[$P{SUBREPORT_DIR} + "garantiasPorVencerEnProx2Semanas_subreport1.jasper"]]></subreportExpression>
+				<subreportExpression><![CDATA[$P{realPath} + "/garantiasPorVencerEnProx2Semanas_subreport1.jasper"]]></subreportExpression>
 			</subreport>
 			<staticText>
 				<reportElement x="12" y="126" width="100" height="20" uuid="c5af6637-841b-4262-8e81-69db55078d0e"/>
